# wallapopsales2

./: README.md  pyproject.toml
src/wallapopsales2/: main.py
