[tool.poetry]
name = "wallapopsales2"
version = "0.1.0"
description = ""
authors = ["Eduardo Grove <edo.grove@gmail.com>"]
readme = "README.md"
packages = [{include = "wallapopsales2", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
wallapy = "^0.6.6"
fuzzywuzzy = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-search = "wallapopsales2.main:main"
